--- a/Microservices/package.json
+++ b/Microservices/package.json
@@ -4,7 +4,8 @@
     "description": "iOS App using Node.js and microservices",
     "main": "server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node index.js"
     },
     "author": "Kayla R. Butler",
     "license": "PVAMU",
