--- a/VERSUS 5/VERSUS/Info.plist
+++ b/VERSUS 5/VERSUS/Info.plist
@@ -4,8 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
-	<key></key>
-	<string></string>
+	<key>NSCameraUsageDescription</key>
+	<string>Because we can!!!</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
