--- a/Microservices/package.json
+++ b/Microservices/package.json
@@ -10,7 +10,8 @@
     "author": "Kayla R. Butler",
     "license": "PVAMU",
     "dependencies": {
-        "express": "3.0.1",
+        "axios": "^0.19.2",
+        "express": "^3.0.1",
         "firebase": "^7.13.2",
         "request": "2.88.2"
     }
